# shop

./: .gitignore  Dockerfile  conftest.py  db.sqlite3  docker-compose.yml  pyproject.toml
cart/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_initial.py
categories/: admin.py  models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py
categories/tests/: test_category.py  test_category_serializer.py
order/: models.py  serializers.py  urls.py  views.py
order/migrations/: 0001_initial.py  0002_remove_order_product.py
products/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py
products/tests/: test_product_serializer.py  test_product_viewset.py
review/: admin.py  models.py  serializers.py  urls.py  views.py
review/migrations/: 0001_initial.py  0002_initial.py  0003_alter_review_user.py
shop1/: asgi.py  permissions.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  test_category.py  test_category_model.py  test_product_model.py  test_product_serializers.py
users/: admin.py  models.py  serializers.py  throttling.py  urls.py  views.py
users/migrations/: 0001_initial.py
