[project]
name = "shop1"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "coverage>=7.13.5",
    "django>=6.0.4",
    "django-filter>=25.2",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "djangorestframework-stubs>=3.16.9",
    "drf-nested-routers>=0.95.0",
    "drf-spectacular>=0.29.0",
    "pytest-django>=4.12.0",
    "python-slugify>=8.0.4",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
